@@ -1,4 +1,6 @@
 
+INCLUDES = -I$(top_srcdir)
+
 lib_LTLIBRARIES = libAtlasNet.la
 
 libAtlasNet_la_LDFLAGS = -version-info @ATLAS_INTERFACE_VERSION_INFO@
