@@ -1,5 +1,7 @@
 SUBDIRS = . Entity Operation
 
+INCLUDES = -I$(top_srcdir)
+
 lib_LTLIBRARIES = libAtlasObjects.la
 
 libAtlasObjects_la_LDFLAGS = -version-info @ATLAS_INTERFACE_VERSION_INFO@
